# Intel_AI_Project_Team02

./: .gitmodules  README.md
AI_Application/: README.md  object_detection_fin.py  object_detection_post_process_fin.py  toolbox_fin.py
AiotClient/: AiotClient.pro  ledkeydev.cpp  mainwidget.cpp  mainwidget.ui  sockclient.cpp  tab1socketclient.cpp  tab4sensorchart.ui  webcamthread.cpp
GUI/: AiotClient  AiotClient.pro  CMakeLists.txt  Images.qrc  Makefile  aiot.db  mainwidget.cpp  mainwidget.h  mainwidget.ui  media.qrc  mjpegclient.cpp  mjpegclient.h  sockclient.cpp  sockclient.h  tab1data.cpp  tab1data.h  tab1data.ui  tab3dgraph.cpp  tab3dgraph.h  toolchain-raspi.cmake
Main_PC/: Makefile  aiot.db  db_client  db_client.c  idpasswd.txt  iot_client  iot_server  iot_server.c
Main_PC/AiotClient/: keyboard.h  mainwidget.h  sockclient.h  tab1data.cpp  tab1data.h  tab1data.ui  tab1devcontrol.cpp  tab1devcontrol.h  tab1devcontrol.ui  tab1sensordatabase.ui.autosave  tab1socketclient.h  tab1socketclient.ui  tab2camstream.cpp  tab2camstream.h  tab2camstream.ui  tab3controlpannel.cpp  tab3controlpannel.h  tab3controlpannel.ui  tab4linechart.cpp  tab4linechart.ui  tab4sensorchart.cpp  tab7camviewerthread.cpp  tab7camviewerthread.h  tab7camviewerthread.ui  webcamthread.h
OpenCv/: app.py  app_cuda.py  app_hailo.py  data.yaml  test.py  test_app.py  train_yolo.py
Qt/: AiotClient  AiotClient.pro  Makefile  aiot.db  mainwidget.cpp  mainwidget.h  mainwidget.ui  moc_tab2camstream.cpp  sockclient.h  tab1data.cpp  tab1data.ui  tab3dgraph.cpp  tab3dgraph.h  ui_tab2camstream.h
(+74 files in other folders)
